# LTEWatch

./: .gitignore  README.md
1_Document/: README.mkd
1_Document/2_Report/: 0_constantes.tex  1_premiere_page.tex  2_lexic.tex  3_introduction.tex  4_1_hardware_part.tex  4_2_antenna_part.tex  4_3_software_part.tex  4_b_solution_part.tex  4_research_part.tex  5_experimental_part.tex  6_result.tex  7_discussion.tex  8_conclusion.tex  9_annexes.tex  Abstract.tex  Report.tex  __Exemple_include.tex  bibliographie.bib
1_Document/2_Report/Include/Figure/modification/: board_1.jfif  board_mod_2.jfif  bord_mod_1.jfif  display_1.jfif  display_10.jfif  display_11.jfif  display_2.jfif  display_3.jfif  display_4.jfif  display_5.jfif  display_6.jfif  display_7.jfif  display_8.jfif  display_9.jfif  motor_1.jfif  motor_2.jfif  motor_disp_board.jfif
1_Document/2_Report/Include/Schema/: PA.drawio  pcb.drawio  power_management_block.drawio  software_diag.drawio  xf_class_diagr.wsd
1_Document/2_Report/lib/: mcode.sty
2_Hardware/: README.mkd
2_Hardware/1_Altium/LTEWatch/: Assembly.OutJob  LTEW_Power_Supply.SchDoc  LTEW_Radio_Freq.Harness  LTEW_Radio_Freq.SchDoc  LTEW_User_Interface.Harness  LTEW_User_Interface.SchDoc  LTEW_WPC_RCVR.SchDoc  LTEW_nRF9160.Harness  LTEW_nRF9160.SchDoc  LTEWatch.BomDoc  LTEWatch.OutJob  LTEWatch.PcbDoc.htm  LTEWatch.PrjPcb  LTEWatch.PrjPcbStructure  LTEWatch.SchDoc
2_Hardware/1_Altium/LTEWatch/Project Outputs for Free Documents/BOM/: Bill of Materials-LTEWatch.xlsx  Status Report.Txt
2_Hardware/1_Altium/LTEWatch/Project Outputs for LTEWatch/: Design Rule Check - LTEWatch.drc  Design Rule Check - LTEWatch.html  LTEWatch-RoundHoles.TXT  LTEWatch-SlotHoles.TXT  LTEWatch-macro.APR_LIB  LTEWatch.DRR  LTEWatch.EXTREP  LTEWatch.G1  LTEWatch.G2  LTEWatch.GBL  LTEWatch.GBS  LTEWatch.GM1  LTEWatch.GTL  LTEWatch.GTO  LTEWatch.GTP  LTEWatch.GTS  LTEWatch.LDP  LTEWatch.REP  LTEWatch.RUL  LTEWatch.apr  LTEWatch.xlsx  Pick Place for LTEWatch.csv  Status Report.Txt
2_Hardware/1_Altium/LTEWatch/lib/: ECSlib.PcbLib  ECSlib.SchLib  LTEWlib.SchLib  pca10090.SCHLIB
2_Hardware/1_Altium/LTEWatch/lib/__Previews/: LTEWatch.SchDocPreview  LTWatch.SchDocPreview
2_Hardware/1_Altium/LTEWatch/pca100901/: pca10090.SCHLIB
2_Hardware/1_Altium/LTEWatch/template/: GregTrack_BIG_LTE_v1_0.SchDoc  GregTrack_BIG_POW_v1_0.SchDoc  GregTrack_BIG_SENS_v1_0.SchDoc
2_Hardware/1_Altium/LTEWatch/template/LegacyLocalTemplates/: A3_Landscape.SchDot  ANSI A Landscape.DwsDot  ANSI D Landscape.DwsDot  BOM Default Template 95.xlt  BOM Default Template.XLT  BOM Manufacturer.XLT  BOM Purchase.XLT  BOM Review.XLT  BOM Simple.XLT  BOM Supplier Links.XLT  BOM Variant Template.XLT  (+6 more)
2_Hardware/3_Prototye/Components/Battery/: battery.ipynb
2_Hardware/3_Prototye/Components/Power_Manager/: BattChrg_Ti_Compare_products.html  part_selection.xlsx  ti_BatChrg.html
2_Hardware/3_Prototye/PCB/: pcb_rooting_instruction.mkd
2_Hardware/3_Prototye/Schematic/: power_supply  prototype_schema.drawio  pwr_sup_blk_digrm.wsd
2_Hardware/3_Prototye/Simulation/BatPolarityProtection/: BatPolarityProtection.asc  BatPolarityProtection.plt  BatPolarityProtection.raw
3_Software/LTEWatch_App/: CMakeLists.txt  LTEWatch_App.code-workspace  README.md  ltewatch_nrf9160_ns.overlay  nrf9160dk_nrf9160_ns.overlay  prj.conf  prj_cb.conf
3_Software/LTEWatch_App/doc/doxygen/: Doxyfile_config
3_Software/LTEWatch_App/doc/doxygen/html/: 32441f7f1eecc497ea0c2b4cbde6380ab62bc97fece578a07571a353c91c0928_8d.html  395c46ca436c174761e631dd85e083e99221c9ee62ccf0422af2e7f4943bafca_8d.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_files_23_820_85_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  _form0_dark_tmp.ps  _form0_tmp.ps  _r_e_a_d_m_e_8md.html  adc_8h.html  adc_8h_source.html  adc__channel__setup__mrsh_8c.html  adc__read__async__mrsh_8c.html  adc__read__mrsh_8c.html  annotated.html  appfactory_8cpp.html  atomic__add__mrsh_8c.html  atomic__and__mrsh_8c.html  atomic__c_8h.html  atomic__c_8h_source.html  atomic__cas__mrsh_8c.html  atomic__nand__mrsh_8c.html  atomic__or__mrsh_8c.html  atomic__ptr__cas__mrsh_8c.html  atomic__ptr__set__mrsh_8c.html  atomic__set__mrsh_8c.html  atomic__sub__mrsh_8c.html  atomic__xor__mrsh_8c.html  autoconf_8h.html  autoconf_8h_source.html  basecontroller_8cpp.html  basecontroller_8h.html  basecontroller_8h_source.html  bathal_8cpp.html  bathal_8h.html  bathal_8h_source.html  batt-config_8h.html  batt-config_8h_source.html  batterymanager_8cpp.html  batterymanager_8h.html  batterymanager_8h_source.html  bbram_8h.html  (+1541 more)
3_Software/LTEWatch_App/doc/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+145 more)
3_Software/LTEWatch_App/src/app/: appfactory.cpp  eventid.h  picowatch.cpp  picowatch.h
3_Software/LTEWatch_App/src/app/config/: uicr-config.h
3_Software/LTEWatch_App/src/board/arm/ltewatch_nrf9160/: Kconfig.defconfig  board.cmake  ltewatch_nrf9160.dts  ltewatch_nrf9160.overlay  ltewatch_nrf9160_common-pinctrl.dtsi  ltewatch_nrf9160_common.dts  ltewatch_nrf9160_ns.dts  ltewatch_nrf9160_ns.yaml  ltewatch_nrf9160_ns_defconfig
3_Software/LTEWatch_App/src/board/arm/ltewatch_nrf9160_ns/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  ltewatch_nrf9160.yaml  ltewatch_nrf9160_common-pinctrl.dtsi  ltewatch_nrf9160_common.dts  ltewatch_nrf9160_common.dtsi  ltewatch_nrf9160_defconfig  ltewatch_nrf9160_ns_defconfig
3_Software/LTEWatch_App/src/core/: factory.cpp  factory.h  main.cpp
3_Software/ubxlib/cfg/: u_cfg_sw.h
3_Software/ubxlib/example/gnss/: msg_main.c
4_Mechanical/: LTEWatch_Prototype_Case_Bottom.stl  LTEWatch_Prototype_Case_Top.stl  LTEWatch_Prototype_Straps.stl
(+255 files in other folders)
